--- a/deploy/dev-ol/devops-sample.yaml
+++ b/deploy/dev-ol/devops-sample.yaml
@@ -28,7 +28,8 @@ spec:
               value: js|html
             - name: CACHE_PUBLIC_EXPIRATION
               value: 3d
-          image: $REGISTRY/$DOCKERHUB_NAMESPACE/$APP_NAME:SNAPSHOT-$BRANCH_NAME-$BUILD_NUMBER
+          #image: $REGISTRY/$DOCKERHUB_NAMESPACE/$APP_NAME:SNAPSHOT-$BRANCH_NAME-$BUILD_NUMBER
+          image: jeffwithlove/devops-java-sample:SNAPSHOT-master-2
           readinessProbe:
             httpGet:
               path: /
