--- a/deploy/prod-ol/devops-sample.yaml
+++ b/deploy/prod-ol/devops-sample.yaml
@@ -34,7 +34,7 @@ spec:
             - name: CACHE_PUBLIC_EXPIRATION
               value: 3d
           #image: $REGISTRY/$DOCKERHUB_NAMESPACE/$APP_NAME:$TAG_NAME
-          image: jeffwithlove/devops-java-sample:SNAPSHOT-master-2
+          image: ileksiah/devops-java-sample:v.0.0.2
           readinessProbe:
             httpGet:
               path: /
